# copyway

./: .copyway.yml.example  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
copyway/: __main__.py  cli.py  config.py  exceptions.py
copyway/protocols/: __init__.py  base.py  factory.py  hdfs.py  local.py  sftp.py  ssh.py
copyway/utils/: logger.py  progress.py  validators.py
tests/: test_cli.py  test_config.py  test_factory.py  test_local_integration.py  test_protocols.py  test_validators.py
