[tool.poetry]
authors = ["Franklin"]
description = "CLI para copiar archivos/directorios usando diferentes protocolos"
name = "copyway"
packages = [{include = "copyway"}]
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
click = "^8.0.0"
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
copyway = "copyway.cli:main"

[tool.poetry.plugins."copyway.protocols"]
hdfs = "copyway.protocols.hdfs:HDFSProtocol"
local = "copyway.protocols.local:LocalProtocol"
ssh = "copyway.protocols.ssh:SSHProtocol"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
